--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ publish = true
 
 [dependencies]
 serde = { version = "1.0.218", features = ["derive"], optional = true }
+thiserror = { version = "2.0.12", optional = true }
 
 [features]
+default = ["parse"]
 serde = ["dep:serde"]
+parse = ["dep:thiserror"]
